--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.8.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "ethers": "^5.7.2",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.8.9"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
