--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
     "@rainbow-me/rainbowkit": "^0.8.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "ethers": "^5.7.2",
+    "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.6",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
