--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
     "@biconomy/core-types": "^0.0.4",
     "@biconomy/smart-account": "^0.0.4",
+    "@headlessui/react": "^1.7.4",
     "@lifi/widget": "^1.26.4",
     "@metamask/browser-passworder": "^4.0.2",
+    "@pushprotocol/restapi": "^0.2.2",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "@truffle/hdwallet-provider": "^2.1.2",
     "crypto-js": "^4.1.1",
